--- a/client-side/src/app/forms/forms.component.html
+++ b/client-side/src/app/forms/forms.component.html
@@ -1,1 +1,56 @@
-<p>forms works!</p>
+<div class="form-container">
+    <h2>Welcome to TaskScape</h2>
+    <form>
+      <div class="form-group">
+        <label for="title">Title:</label>
+        <input type="text" id="title" [(ngModel)]="title" name="title" required />
+      </div>
+  
+      <div class="form-group">
+        <label for="description">Description:</label>
+        <textarea id="description" [(ngModel)]="description" name="description" rows="4" required></textarea>
+      </div>
+  
+      <div class="form-group">
+        <label for="date">Due Date:</label>
+        <input type="date" id="date" [(ngModel)]="date" name="date" required />
+      </div>
+  
+      <div class="form-group">
+        <label>Priority:</label>
+        <div>
+          <input
+            type="radio"
+            id="low"
+            [(ngModel)]="priority"
+            name="priority"
+            value="LOW"
+          />
+          <label for="low">Low</label>
+        </div>
+        <div>
+          <input
+            type="radio"
+            id="medium"
+            [(ngModel)]="priority"
+            name="priority"
+            value="MEDIUM"
+          />
+          <label for="medium">Medium</label>
+        </div>
+        <div>
+          <input
+            type="radio"
+            id="high"
+            [(ngModel)]="priority"
+            name="priority"
+            value="HIGH"
+          />
+          <label for="high">High</label>
+        </div>
+      </div>
+  
+      <button type="submit" (click)="onSubmit()">Submit</button>
+    </form>
+  </div>
+  
