--- a/client-side/src/app/Components/menu/menu.component.html
+++ b/client-side/src/app/Components/menu/menu.component.html
@@ -1,7 +1,9 @@
 <div class = "">
     <!--in this menu class, we will define a router click, such that we can view tasks in my tasks secion-->
     <ul>
-        <li><a routerLink = "/tasks">my tasks</a></li>
+        <li><a routerLink = "/my-tasks">my tasks</a></li>
         <!--and the clicking on the home in the Ui renders the form component with the path attributed-->
+
+        <li><a routerLink = "/create">create tasks</a></li>
     </ul>
 </div>
