--- a/client-side/src/app/Components/forms/forms.component.html
+++ b/client-side/src/app/Components/forms/forms.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
     <h2>Welcome to TaskScape</h2>
-    <form>
+    <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="title">Title:</label>
         <input type="text" id="title" [(ngModel)]="title" name="title" required />
@@ -31,16 +31,6 @@
         <div>
           <input
             type="radio"
-            id="medium"
-            [(ngModel)]="priority"
-            name="priority"
-            value="MEDIUM"
-          />
-          <label for="medium">Medium</label>
-        </div>
-        <div>
-          <input
-            type="radio"
             id="high"
             [(ngModel)]="priority"
             name="priority"
@@ -50,6 +40,11 @@
         </div>
       </div>
   
-      <button type="submit" (click)="onSubmit()">Submit</button>
+      <button type="submit">Submit</button>
     </form>
+
+    <div class = "" *NgIf = "isSuccess">
+      <h4>You have successfully created a task!!!</h4>
+
+    </div>
   </div>
