handle redirection after task creation

--- a/client-side/src/app/Components/forms/forms.component.html
+++ b/client-side/src/app/Components/forms/forms.component.html
@@ -32,7 +32,7 @@
           <input
             type="radio"
             id="high"
-            [(ngModel)]="priority"
+            [(ngModel)]="priority"GIT BRANCH
             name="priority"
             value="HIGH"
           />
@@ -43,7 +43,8 @@
       <button type="submit">Submit</button>
     </form>
 
-    <div class = "" *NgIf = "isSuccess">
+    <div class = "" *ngIF = "isSuccess">
+
       <h4>You have successfully created a task!!!</h4>
 
     </div>
