Add get request and add  response Dto handling

--- a/client-side/src/app/Components/menu/menu.component.html
+++ b/client-side/src/app/Components/menu/menu.component.html
@@ -4,6 +4,6 @@
         <li><a routerLink = "/my-tasks">my tasks</a></li>
         <!--and the clicking on the home in the Ui renders the form component with the path attributed-->
 
-        <li><a routerLink = "/create">create tasks</a></li>
+        <li><a routerLink = "/create">new task</a></li>
     </ul>
 </div>
