--- a/client-side/src/app/Components/my-tasks/my-tasks.component.html
+++ b/client-side/src/app/Components/my-tasks/my-tasks.component.html
@@ -8,8 +8,9 @@ with directives
     <h1 class="task-title">{{ task.title }}</h1>
     <p class="task-detail">{{ task.description }}</p>
     <p class="task-detail">{{ task.priority | lowercase }} priority</p>
-    <p class="task-detail">Datee: {{ task.date }}</p>
+    <p class="task-detail">Date: {{ task.date }}</p>
     <div class="task-status">
+      <button type = "button" (click)="deleteTask(task.id)">delete</button>
       <button class="btn-pending" *ngIf="task.status == 'COMPLETED'" (click)="setToPending(task.id!, 'PENDING')">
         Mark as Pending</button>
       <button class="btn-completed" *ngIf="task.status == 'PENDING'" (click)="setToCompleted(task.id!, 'COMPLETED')">
