add dependencies to service

--- a/client-side/src/app/Components/home/home.component.html
+++ b/client-side/src/app/Components/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div>
+    
+    <h3>Welcome to TaskScape</h3>
+    <ul>
+        <li><a routerLink="/register">Register</a></li>
+        <li><a routerLink="/login">Sign in</a></li>
+    </ul>
+</div>
+
+
+
