--- a/client-side/src/app/Components/register/register.component.html
+++ b/client-side/src/app/Components/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="registerSubmit()">
+
+<div>
+    <label for="firstname">First Name:</label>
+    <input type="text" id="firstname" name="firstname" [(ngModel)]="user.firstname" required>
+  </div>
+
+  <div>
+    <label for="lastname">Last Name:</label>
+    <input type="text" id="lastname" name="lastname" [(ngModel)]="user.lastname" required>
+  </div>
+
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" [(ngModel)]="user.email" required>
+  </div>
+
+  <div>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" [(ngModel)]="user.password" required>
+  </div>
+
+  <button type="submit">Register</button>
+</form>
